Bug 309394 - configure mail in kontact
Summary: configure mail in kontact
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.9.2
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-01 20:23 UTC by cybois18
Modified: 2012-11-01 21:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description cybois18 2012-11-01 20:23:56 UTC
Application: kontact (4.9.2)
KDE Platform Version: 4.9.2
Qt Version: 4.8.3
Operating System: Linux 3.5.0-17-generic i686
Distribution: Ubuntu 12.10

-- Information about the crash:
- What I was doing when the application crashed:
When i selected the tab "Mail" in the settings of Kontact, Kontact crashed.

The crash can be reproduced every time.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
Using host libthread_db library "/lib/i386-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0xb23d5740 (LWP 3077))]

Thread 4 (Thread 0xafcffb40 (LWP 3078)):
#0  0xb7763424 in __kernel_vsyscall ()
#1  0xb3bc796b in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/i386-linux-gnu/libpthread.so.0
#2  0xb60ac64c in pthread_cond_wait () from /lib/i386-linux-gnu/libc.so.6
#3  0xb57ff0e9 in ?? () from /usr/lib/i386-linux-gnu/libQtWebKit.so.4
#4  0xb57ff1df in ?? () from /usr/lib/i386-linux-gnu/libQtWebKit.so.4
#5  0xb3bc3d4c in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#6  0xb609ed3e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 3 (Thread 0xaf3d6b40 (LWP 3079)):
#0  0xb3912dcd in clock_gettime () from /lib/i386-linux-gnu/librt.so.1
#1  0xb6309fb5 in do_gettime (frac=0xaf3d5fe0, sec=0xaf3d5fd8) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0xb63f136e in QTimerInfoList::updateCurrentTime (this=0xaea02074) at kernel/qeventdispatcher_unix.cpp:343
#4  0xaea02074 in ?? ()

Thread 2 (Thread 0xad273b40 (LWP 3090)):
#0  0xb3912dcd in clock_gettime () from /lib/i386-linux-gnu/librt.so.1
#1  0xb6309fb5 in do_gettime (frac=0xad272f70, sec=0xad272f68) at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0xb63f136e in QTimerInfoList::updateCurrentTime (this=0xac902074) at kernel/qeventdispatcher_unix.cpp:343
#4  0x7fffffff in ?? ()
#5  0xb63f16fa in QTimerInfoList::timerWait (this=0xac902074, tm=...) at kernel/qeventdispatcher_unix.cpp:450
#6  0x7fffffff in ?? ()

Thread 1 (Thread 0xb23d5740 (LWP 3077)):
[KCrash Handler]
#7  0xadffe1fc in end (this=0xc) at /usr/include/qt4/QtCore/qlist.h:102
#8  constEnd (this=0xc) at /usr/include/qt4/QtCore/qlist.h:272
#9  KPIMIdentities::IdentityManager::shadowIdentities (this=0x0) at ../../kpimidentities/identitymanager.cpp:207
#10 0xac2b4e7b in KMail::IdentityPage::load (this=0x90fd4b8) at ../../kmail/identitypage.cpp:92
#11 0x090fd4b8 in ?? ()

Reported using DrKonqi
Comment 1 Laurent Montel 2012-11-01 21:57:08 UTC
Git commit 4a2d482033d08d324ea5cb3d37718578fd97795c by Montel Laurent.
Committed on 01/11/2012 at 22:56.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 309394 - configure mail in kontact

FIXED-IN: 4.9.3

M  +6    -0    kmail/identitypage.cpp

http://commits.kde.org/kdepim/4a2d482033d08d324ea5cb3d37718578fd97795c