Fix Bug 309394 - configure mail in kontact

FIXED-IN: 4.9.3
BUG: 309394